Update Tomcat version to work with Java 11.
Prior version of tomcat would not work with Java 11. There is still
the issue of newer versions of Java being too large for GitHub but
a pull of OpenJDK allows all services to start.

Re:#345